Update batch uploader with calculable records

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -26,14 +26,14 @@
 {% block page_body %}
 <div class="container">
     <div class="content-section">
-        <div class="panel panel-default" id="database-panel">
+        <div class="panel panel-primary" id="database-panel">
             <div class="panel-heading">Database</div>
             <div class="panel-body">
                 <div class="container-fluid">
 
                     <div class="row equal">
                         <div class="col-md-4">
-                            <div class="panel panel-primary">
+                            <div class="panel panel-info">
                                 <div class="panel-heading">Financial Data</div>
                                 <div class="panel-body">
                                     <ul>
@@ -46,7 +46,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="panel panel-primary">
+                            <div class="panel panel-info">
                                 <div class="panel-heading">Companies & Sectors</div>
                                 <div class="panel-body">
                                     <ul>
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="panel panel-primary">
+                            <div class="panel panel-info">
                                 <div class="panel-heading">Macroeconomic Data</div>
                                 <div class="panel-body">
                                 </div>
@@ -68,7 +68,7 @@
 
                     <div class="row equal top-buffer">
                         <div class="col-md-4">
-                            <div class="panel panel-primary">
+                            <div class="panel panel-info">
                                 <div class="panel-heading">Stock Exchagne Data</div>
                                 <div class="panel-body">
                                     <ul>
@@ -80,7 +80,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="panel panel-primary">
+                            <div class="panel panel-info">
                                 <div class="panel-heading">Geographic Data</div>
                                 <div class="panel-body">
                                     <ul>
@@ -110,13 +110,13 @@
                 </div>
             </div>
         </div>
-        <div class="panel panel-default" id="tools-panel">
+        <div class="panel panel-primary" id="tools-panel">
             <div class="panel-heading">Tools</div>
             <div class="panel-body">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-3">
-                            <div class="panel panel-primary">
+                            <div class="panel panel-info">
                                 <div class="panel-heading">Financial Data Miner</div>
                                 <div class="panel-body">
                                     <p>Extract financial data from reports with help of our parser.</p>
@@ -125,7 +125,7 @@
                             </div>
                         </div>
                         <div class="col-md-3">
-                            <div class="panel panel-primary">
+                            <div class="panel panel-info">
                                 <div class="panel-heading">Batch Uploader</div>
                                 <div class="panel-body">
                                     <p>Upload simultaneously data for many records concerning different periods.</p>
