Refactor dbmd tools js files

--- a/app/templates/admin/tools/direct_input_miner.html
+++ b/app/templates/admin/tools/direct_input_miner.html
@@ -38,7 +38,7 @@
                 </div>
                 <dvi id="report-data"{% if not (report_timerange and report_timestamp) %} style="display: none;" {% endif %}>
                     <p>Financial report for <strong><span class="timerange" id="report-timerange">{% if report_timerange %}{{report_timerange}}{% else %}---{% endif %}</span></strong> months ended on <strong><span class="timestamp" id="report-timestamp">{% if report_timestamp %}{{report_timestamp.strftime('%Y-%m')}} {% else %}---{% endif %}</span></strong> 
-                    (<a href="javascript:void(0);" class="time-editor-btn">Edit <span class="glyphicon glyphicon-edit"></span></a>).</p>
+                    (<a href="javascript:void(0);" class="report-time-editor-btn">Edit <span class="glyphicon glyphicon-edit"></span></a>).</p>
                     <p class="help-block">Financial report is optional. All uploaded records will be associated with specified report.</p>
                 </dvi>
             </div>
@@ -134,7 +134,7 @@
                         <th class="column-value" data-column-id="{{loop.index}}">
                             <span class="timerange">{{timerange}}</span> months ended on <span class="timestamp">{{timestamp}}</span>
                             <a href="javascript:void(0);" class="time-editor-btn"><span class="glyphicon glyphicon-edit"></span></a>
-                            <a href="javascript:void(0);" onclick="removeColumn('#identified-records', {{loop.index}});" <span class="glyphicon glyphicon-remove"></span></a>
+                            <a href="javascript:void(0);" class="column-remove-btn"><span class="glyphicon glyphicon-remove"></span></a>
                         </th>
                     {% endfor %}
                 </tr>  
@@ -177,7 +177,7 @@
 
     <div class="container container-full">
         <div style="margin-top:30px"></div>
-        {{ utils.render_export_form(url_for('dbmd_tools.upload_data')) }}
+        {{ utils.render_export_form(url_for('dbmd_tools.upload_data'), onclick='exportData();') }}
     </div>
 {% endblock %}
 
@@ -186,9 +186,10 @@
 <script src="{{ url_for('static', filename='vendors/select2/js/select2.full.min.js') }}"></script>
 <script src="{{ url_for('static', filename='vendors/bootstrap-datepicker/js/bootstrap-datepicker.min.js') }}"></script>
 <script src="{{ url_for('static', filename='vendors/bootstrap3-dialog/js/bootstrap-dialog.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/dbmd_utils.js') }}"></script>
+<script src="{{ url_for('static', filename='js/rtab.js') }}"></script>
 <script>
     var rtypes = {{ rtypes|tojson }};
 </script>
-<script src="{{ url_for('static', filename='js/dbmd_tools.js') }}"></script>
 <script src="{{ url_for('static', filename='js/direct_input_miner.js') }}"></script>
 {% endblock %}
