--- a/app/templates/admin/tools/miner_index.html
+++ b/app/templates/admin/tools/miner_index.html
@@ -191,7 +191,7 @@
 {{ super() }}
 <script src="{{ url_for('static', filename='vendors/select2/js/select2.full.min.js') }}"></script>
 <script src="{{ url_for('static', filename='vendors/bootstrap-datepicker/js/bootstrap-datepicker.min.js') }}"></script>
-<script src="{{ url_for('static', filename='js/miner.js') }}"></script>
+<script src="{{ url_for('static', filename='js/dbmd_utils.js') }}"></script>
 <script>
     $("select").applySelect2();
     $('input[name="report_timestamp"]').bindDatePicker();
