--- a/app/templates/admin/tools/batch_uploader.html
+++ b/app/templates/admin/tools/batch_uploader.html
@@ -47,7 +47,7 @@
                 </div>
                 <dvi id="report-data"{% if not (report_timerange and report_timestamp) %} style="display: none;" {% endif %}>
                     <p>Financial report for <strong><span class="timerange" id="report-timerange">{% if report_timerange %}{{report_timerange}}{% else %}---{% endif %}</span></strong> months ended on <strong><span class="timestamp" id="report-timestamp">{% if report_timestamp %}{{report_timestamp.strftime('%Y-%m')}} {% else %}---{% endif %}</span></strong> 
-                    (<a href="javascript:void(0);" class="time-editor-btn">Edit <span class="glyphicon glyphicon-edit"></span></a>).</p>
+                    (<a href="javascript:void(0);" class="report-time-editor-btn">Edit <span class="glyphicon glyphicon-edit"></span></a>).</p>
                     <p class="help-block">Financial report is optional. All uploaded records will be associated with specified report.</p>
                 </dvi>
             </div>
@@ -64,10 +64,10 @@
                     {% for i in range(2) %}
                         {% set timerange = '---' %}
                         {% set timestamp = '---' %}
-                        <th class="column-value" data-column-id="{{loop.index}}">
+                        <th class="column-value">
                             <span class="timerange">{{timerange}}</span> months ended on <span class="timestamp">{{timestamp}}</span>
                             <a href="javascript:void(0);" class="time-editor-btn"><span class="glyphicon glyphicon-edit"></span></a>
-                            <a href="javascript:void(0);" onclick="removeColumn('#identified-records', {{loop.index}});" <span class="glyphicon glyphicon-remove"></span></a>
+                            <a href="javascript:void(0);" class="column-remove-btn"><span class="glyphicon glyphicon-remove"></span></a>
                         </th>
                     {% endfor %}
 
@@ -92,7 +92,7 @@
                             </button>      
                         </td>
                         <td class="cell-calculable">
-                            <input type="checkbox" {% if calculable_by_default %} checked {% endif %} {% if not calculable_row %} disabled {% endif %}>
+                            <input tabindex="-1" type="checkbox" {% if calculable_by_default %} checked {% endif %} {% if not calculable_row %} disabled {% endif %}>
                         </td>
                         <td class="cell-rtype">
                             <span class="record-rtype">{{item.rtype.name}}</span>
@@ -112,7 +112,7 @@
 
     <div class="container container-full">
         <div style="margin-top:30px"></div>
-        {{ utils.render_export_form(url_for('dbmd_tools.upload_data')) }}
+        {{ utils.render_export_form(url_for('dbmd_tools.upload_data'), onclick='exportData();') }}
     </div>
 {% endblock %}
 
@@ -121,105 +121,11 @@
 <script src="{{ url_for('static', filename='vendors/select2/js/select2.full.min.js') }}"></script>
 <script src="{{ url_for('static', filename='vendors/bootstrap-datepicker/js/bootstrap-datepicker.min.js') }}"></script>
 <script src="{{ url_for('static', filename='vendors/bootstrap3-dialog/js/bootstrap-dialog.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/dbmd_utils.js') }}"></script>
+<script src="{{ url_for('static', filename='js/rtab.js') }}"></script>
 <script>
     var rtypes = {{ rtypes|tojson }};
     var fschema_formulas = {{ fschema.formulas|tojson }};
-
-    $(document).on("change", "td.cell-value > input", function() {
-        var rtype_trigger = $(this).closest("tr").attr("data-record-rtype");
-        var columnIndex = $(this).closest("td").index();
-        var table = $(this).closest("table");
-        updateRecords(rtype_trigger, table, columnIndex);
-    });
-
-    $(document).on("change", "td.cell-uom > select", function() {
-        var rtype_trigger = $(this).closest("tr").attr("data-record-rtype");
-        var columns = $(this).closest("tr").find("td.cell-value");
-        var table = $(this).closest("table");
-        for (var i = 0; i < columns.length; i++) {
-            updateRecords(rtype_trigger, table, $(columns[i]).index());
-        }
-    });
-
-    $(document).on("change", "td.cell-calculable > input", function() {
-        if ($(this).is(":checked")) {
-            $(this).closest("tr").addClass("row-calculable");
-            $(this).closest("tr").find("td.cell-value input").prop("disabled", true);
-
-            var rtype_trigger = $(this).closest("tr").attr("data-record-rtype");
-            var columns = $(this).closest("tr").find("td.cell-value");
-            var table = $(this).closest("table");
-            for (var i = 0; i < columns.length; i++) {
-                updateRecords(rtype_trigger, table, $(columns[i]).index());
-            }
-        } else {
-            $(this).closest("tr").removeClass("row-calculable");
-            $(this).closest("tr").find("td.cell-value input").prop("disabled", false);
-        }
-    });
-
-    function updateRecords(rtype, table, columnIndex) {
-        if (rtype in fschema_formulas) {
-            var formulas = fschema_formulas[rtype];
-            var recordsInTable = getRTypesFromTable(table);
-
-            for (var i = 0; i < formulas.length; i++) {
-                // if (rtype === formulas[i].rtype) {
-                //     continue;
-                // }
-                if (recordsInTable.indexOf(formulas[i].rtype) < 0 || !isFormulaCalculable(formulas[i], table)) {
-                    continue;
-                }
-                var value = calculateFormula(formulas[i], table, columnIndex);
-                setValueOfRecord(formulas[i].rtype, value, table, columnIndex);
-            }
-        }
-    }
-
-    function setValueOfRecord(rtype, value, table, columnIndex) {
-        var row = table.find("tbody tr[data-record-rtype='" + rtype + "']");
-        for (var i = 0; i < row.length; i++) {
-            if (!$(row[i]).find("td.cell-calculable input").is(":checked")) {
-                continue;
-            }
-            var uom = parseInt($(row[i]).find("td.cell-uom select").val());
-            $($(row[i]).children("td")[columnIndex]).find("input").val(value / uom);
-        }
-    }
-
-    function calculateFormula(formula, table, columnIndex) {
-        var components = formula.components;
-        var value = 0;
-        for (var i = 0; i < components.length; i++) {
-            var row = table.find("tbody tr[data-record-rtype='" + components[i].rtype + "']");
-            for (var j = 0; j < row.length; j++) {
-                var rtype_value = parseFloat($($(row[j]).children("td")[columnIndex]).find("input").val());
-                var uom = parseInt($(row[j]).find("td.cell-uom select").val());
-                value += parseInt(components[i].sign) * rtype_value * uom;
-            }
-        }
-        return value;
-    }
-
-    function isFormulaCalculable(formula, table) {
-        var components = formula.components;
-        var recordsInTable = getRTypesFromTable(table);
-        for (var i = 0; i < components.length; i++) {
-            if (recordsInTable.indexOf(components[i].rtype) < 0) {
-                return false;
-            }
-        }
-        return true;
-    }
-
-    function getRTypesFromTable(table) {
-        var rtypes = table.find("tbody tr").map(function() { 
-            return $(this).attr("data-record-rtype"); 
-        }).get();
-        return rtypes;
-    }
-
 </script>
-<script src="{{ url_for('static', filename='js/dbmd_tools.js') }}"></script>
 <script src="{{ url_for('static', filename='js/batch_uploader.js') }}"></script>
 {% endblock %}
