Add support for formulas in dbmd ui

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -41,6 +41,7 @@
                                         <li><a href="{{ url_for('recordtype.index_view') }}">Record Types</a></li>
                                         <li><a href="{{ url_for('financialstatementtype.index_view') }}">Financial Statement Types</a></li>
                                         <li><a href="{{ url_for('report.index_view') }}">Reports</a></li>
+                                        <li><a href="{{ url_for('recordformula.index_view') }}">Record Formulas</a></li>
                                     </ul>
                                 </div>
                             </div>
