--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -1,15 +1,21 @@
 <!-- app/templates/home/index.html -->
 
 {% extends "base.html" %}
-{% block title %}Home{% endblock %}
-{% block body %}
+{% block title %} Home Page{% endblock %}
+
+{% block head_css %}
+{{ super() }}
+    <link href="{{ url_for('static', filename='css/style.css') }}", rel="stylesheet">
+{% endblock %}
+
+{% block page_body %}
 <div class="intro-header">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="intro-message">
                     <h1>Open Stock</h1>
-                    <h3>Data as the foundation of your investments.</h3>
+                    <h3>Data as the foundation of good investments.</h3>
                     <hr class="intro-divider">
                     </ul>
                 </div>
