Fix bugs related to data uploading. Update records spec.

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -33,7 +33,7 @@
 
                     <div class="row equal">
                         <div class="col-md-4">
-                            <div class="panel panel-success">
+                            <div class="panel panel-info">
                                 <div class="panel-heading">Financial Data</div>
                                 <div class="panel-body">
                                     <ul>
@@ -44,7 +44,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="panel panel-success">
+                            <div class="panel panel-info">
                                 <div class="panel-heading">Companies & Sectors</div>
                                 <div class="panel-body">
                                     <ul>
@@ -55,7 +55,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="panel panel-success">
+                            <div class="panel panel-info">
                                 <div class="panel-heading">Metadata</div>
                                 <div class="panel-body">
                                     <ul>
@@ -96,7 +96,7 @@
                 <div class="container-fluid">
                     <div class="row equal">
                         <div class="col-md-4">
-                            <div class="panel panel-success">
+                            <div class="panel panel-info">
                                 <div class="panel-heading">Financial Data Miner</div>
                                 <div class="panel-body">
                                     <p>Extract financial data from reports with help of our parser.</p>
@@ -105,7 +105,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="panel panel-success">
+                            <div class="panel panel-info">
                                 <div class="panel-heading">Batch Uploader</div>
                                 <div class="panel-body">
                                     <p>Upload simultaneously data for many records concerning different periods.</p>
