--- a/app/templates/admin/tools/batch_index.html
+++ b/app/templates/admin/tools/batch_index.html
@@ -72,7 +72,7 @@
           <p class="help-block">{{error}}</p>
       {% endfor %}
     </div>
-    <button type="submit" class="btn btn-success">Process Input</button>
+    <button type="submit" class="btn btn-success">Enter data</button>
   </form>
 </div>
 {% endblock %}
