--- a/app/templates/admin/tools/pdf_file_miner.html
+++ b/app/templates/admin/tools/pdf_file_miner.html
@@ -307,7 +307,7 @@
                                     {% endif %}
                                     <th class="column-value" data-column-id="{{loop.index}}">
                                         <span class="timerange">{{timerange}}</span> months ended on <span class="timestamp">{{timestamp}}</span>
-                                        <a href="#" data-toggle="modal" data-target="#column-editor"><span class="glyphicon glyphicon-edit"></span></a>
+                                        <a href="javascript:void(0);" class="time-editor-btn"><span class="glyphicon glyphicon-edit"></span></a>
                                         <a href="javascript:void(0);" class="column-remove-btn"><span class="glyphicon glyphicon-remove"></span></a>
                                     </th>
                                 {% endfor %}
